--- a/styles/about.css
+++ b/styles/about.css
@@ -1,21 +1,13 @@
 .about {
-  color: var(--primary-grey);
-  line-height: 1.3;
-  max-width: 90%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 1.2rem;
+  margin-bottom: 2rem;
 }
 
 .about__title {
   text-transform: uppercase;
-  font-size: 1.5rem;
-}
-
-.about__content {
-  font-size: 1.2rem;
 }
 
 .about__image {
