--- a/styles/common.css
+++ b/styles/common.css
@@ -27,13 +27,23 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
-  line-height: 1;
+  line-height: 1.3;
   font-weight: 400;
   color: var(--primary-grey);
   /* background-color: red; */
   overflow-x: hidden;
+  font-size: 1rem;
 }
 
-.margin--bottom {
-  margin-bottom: 2rem;
+h2 {
+  font-size: 2.2rem;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+.container {
+  max-width: 90%;
+  margin: 0 auto;
 }
