--- a/styles/common.css
+++ b/styles/common.css
@@ -23,6 +23,7 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -34,6 +35,7 @@ body {
   /* background-color: red; */
   overflow-x: hidden;
   font-size: 1rem;
+  scroll-behavior: smooth;
 }
 
 h2 {
