--- a/styles/common.css
+++ b/styles/common.css
@@ -31,11 +31,12 @@ body {
   font-family: "Roboto", sans-serif;
   line-height: 1.3;
   font-weight: 400;
-  color: var(--primary-grey);
+  color: #fff;
   /* background-color: red; */
   overflow-x: hidden;
   font-size: 1.5rem;
   scroll-behavior: smooth;
+  height: 100vh;
 }
 
 h2 {
@@ -51,6 +52,24 @@ p {
   max-width: 768px;
   margin: 0 auto;
   padding: 2rem 0;
+}
+
+.bg--fixed {
+  position: absolute;
+  background-image: linear-gradient(
+      rgba(36, 42, 46, 0.6),
+      rgba(36, 42, 46, 0.6)
+    ),
+    url("../assets/images/mobile-banner.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .btn {
@@ -72,4 +91,27 @@ p {
 
 .btn--secondary:hover {
   background-color: grey;
+}
+
+.background--animation {
+  background: linear-gradient(-45deg, #1c7ed6, #4dabf7, #4dabf7, #1c7ed6);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.background--gradient {
+  background: linear-gradient(-45deg, #1864ab, #228be6, #228be6, #1864ab);
+  background-size: 100% 100%;
 }
