--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: var(--primary-color);
   color: white;
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
 .footer .container {
