--- a/styles/common.css
+++ b/styles/common.css
@@ -39,12 +39,16 @@ body {
   height: 100vh;
 }
 
+h1 {
+  font-size: 4rem;
+}
+
 h2 {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 .container {
