--- a/styles/about.css
+++ b/styles/about.css
@@ -3,11 +3,20 @@
   flex-direction: column;
   align-items: center;
   gap: 1.3rem;
-  margin-bottom: 2rem;
+  margin-bottom: 10rem;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1024px;
 }
 
-.about__title {
+.about__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.about__content h2 {
   text-transform: uppercase;
+  margin-bottom: 1rem;
 }
 
 .about__image {
@@ -16,4 +25,19 @@
 
 .about__image img {
   height: 100%;
+  border-radius: 10px;
+}
+
+@media (min-width: 1024px) {
+  .about {
+    flex-direction: row-reverse;
+    gap: 5rem;
+  }
+
+  .about__content {
+    gap: 5rem;
+  }
+  p {
+    font-size: 2.2rem;
+  }
 }
