--- a/styles/skills.css
+++ b/styles/skills.css
@@ -49,7 +49,7 @@
   text-align: center;
 }
 
-.progress2 {
+.progress {
   padding: 6px;
   border-radius: 30px;
   background: rgba(0, 0, 0, 0.25);
@@ -57,7 +57,7 @@
     0 1px rgba(255, 255, 255, 0.08);
 }
 
-.progress-bar2 {
+.progress--bar {
   height: 18px;
   border-radius: 30px;
   background-image: linear-gradient(
@@ -69,32 +69,32 @@
   transition-property: width, background-color;
 }
 
-.progress-html .progress-bar2 {
+.progress--html .progress--bar {
   max-width: 90%;
   background-color: #4263eb;
   animation: progressAnimation 6s;
 }
-.progress-css .progress-bar2 {
+.progress--css .progress--bar {
   max-width: 75%;
   background-color: #4263eb;
   animation: progressAnimation 6s;
 }
-.progress-js .progress-bar2 {
+.progress--js .progress--bar {
   max-width: 80%;
   background-color: #4263eb;
   animation: progressAnimation 6s;
 }
-.progress-ts .progress-bar2 {
+.progress--ts .progress--bar {
   max-width: 15%;
   background-color: #4263eb;
   animation: progressAnimation 6s;
 }
-.progress-node .progress-bar2 {
+.progress--node .progress--bar {
   max-width: 60%;
   background-color: #4263eb;
   animation: progressAnimation 6s;
 }
-.progress-react .progress-bar2 {
+.progress--react .progress--bar {
   max-width: 70%;
   background-color: #4263eb;
   animation: progressAnimation 6s;
