--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,4 @@
 .form {
-  max-width: 320px;
-  min-width: 280px;
   margin: 0 auto;
   padding: 4rem;
   border-radius: 1rem;
@@ -30,4 +28,24 @@ textarea.form__input {
 
 .form__element.form__element--checkbox {
   flex-direction: row;
+}
+
+@media (min-width: 1024px) {
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+  }
+
+  .known {
+    grid-column: 1/3;
+  }
+
+  .more--info {
+    grid-column: 1/3;
+  }
+
+  .form__element--checkbox {
+    grid-column: 1/3;
+  }
 }
