--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,18 @@
 .header {
   position: sticky;
   padding: 0.5rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
   z-index: 999;
   top: 0;
   box-shadow: 0 3px 10px 3px rgba(0, 0, 0, 0.2);
+}
+
+.header__items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 .header .header__logo {
@@ -37,40 +43,6 @@
 .header__nav__list__item--menu {
   display: flex;
 }
-
-/* .header__nav__list__item::before,
-.header__nav__list__item::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  display: block;
-  background-color: #fff;
-  transition: all 250ms ease-in-out;
-}
-
-.header__nav__list__item::after {
-  height: 2px;
-  width: 72px;
-  box-shadow: 0 3rem #fff;
-}
-
-.header__nav__list__item:hover::after {
-  top: -10px;
-  box-shadow: 0 48px #fff;
-}
-
-.header__nav__list__item::before {
-  width: 2px;
-  height: 30px;
-  box-shadow: 7rem 0 #fff;
-}
-
-.header__nav__list__item:hover::before {
-  left: -10px;
-  box-shadow: 90px 0 #fff;
-}
-*/
 
 .hover-underline-animation {
   display: flex;
