--- a/styles/form.css
+++ b/styles/form.css
@@ -2,7 +2,8 @@
   margin: 0 auto;
   padding: 4rem;
   border-radius: 1rem;
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  /* box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15); */
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.15);
 }
 
 .form__element {
