--- a/styles/common.css
+++ b/styles/common.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Roboto", sans-serif;
   line-height: 1.3;
   font-weight: 400;
