--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,6 @@
 .header {
   position: sticky;
   padding: 0.5rem 2rem;
-
   z-index: 999;
   top: 0;
   box-shadow: 0 3px 10px 3px rgba(0, 0, 0, 0.2);
@@ -13,6 +12,10 @@
   justify-content: space-between;
   max-width: 1024px;
   margin: 0 auto;
+}
+
+.heacer__nav {
+  width: 100%;
 }
 
 .header .header__logo {
@@ -85,5 +88,36 @@
 @media (min-width: 1024px) {
   .hidden--item {
     display: flex;
+  }
+}
+
+@media (min-width: 2560px) {
+  .header {
+    padding: 3rem 10rem;
+  }
+
+  .header__nav {
+    width: auto;
+  }
+
+  .header__items {
+    max-width: 1400px;
+  }
+
+  .header__nav__list {
+    width: 100%;
+  }
+
+  .header .header__logo {
+    width: 10rem;
+  }
+
+  .header__nav .header__nav__list {
+    justify-content: space-between;
+    width: 800px;
+  }
+  .header__nav__list__item a:link,
+  .header__nav__list__item a:visited {
+    font-size: 3rem;
   }
 }
