--- a/styles/about.css
+++ b/styles/about.css
@@ -47,3 +47,12 @@
     font-size: 2.3rem;
   }
 }
+
+@media (min-width: 2560px) {
+  .about {
+    max-width: 1400px;
+  }
+  p {
+    font-size: 3rem;
+  }
+}
