--- a/styles/common.css
+++ b/styles/common.css
@@ -129,3 +129,12 @@ p {
       url("../assets/images/matrix-bg.jpg");
   }
 }
+
+@media (min-width: 2560px) {
+  h1 {
+    font-size: 10rem;
+  }
+  h2 {
+    font-size: 6.5rem;
+  }
+}
