--- a/styles/skills.css
+++ b/styles/skills.css
@@ -49,9 +49,8 @@
 .progress {
   padding: 6px;
   border-radius: 30px;
-  background: rgba(0, 0, 0, 0.25);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25),
-    0 1px rgba(255, 255, 255, 0.08);
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(0, 255, 255, 0.08);
 }
 
 .progress--bar {
@@ -112,5 +111,21 @@
   .skills__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 2560px) {
+  .skills__list {
+    max-width: 1400px;
+    column-gap: 5rem;
+  }
+  .skills__item img {
+    height: 50px;
+    width: 50px;
+    margin-right: 0.5rem;
+    position: relative;
+  }
+  .progress--bar {
+    height: 25px;
   }
 }
