feat: media querys for btn class for 4k

--- a/styles/common.css
+++ b/styles/common.css
@@ -137,4 +137,9 @@ p {
   h2 {
     font-size: 6.5rem;
   }
+  .btn {
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 3rem;
+  }
 }
