--- a/styles/form.css
+++ b/styles/form.css
@@ -30,6 +30,7 @@ textarea.form__input {
 
 .form__element.form__element--checkbox {
   flex-direction: row;
+  align-items: center;
 }
 
 @media (min-width: 1024px) {
@@ -49,5 +50,36 @@ textarea.form__input {
 
   .form__element--checkbox {
     grid-column: 1/3;
+  }
+}
+
+@media (min-width: 2560px) {
+  .container {
+    max-width: 1400px;
+  }
+  .form__label {
+    font-size: 4rem;
+  }
+  .form__input {
+    padding: 10px 20px;
+    /* border-radius: 5px; */
+  }
+
+  .form__input::placeholder {
+    font-size: 2.5rem;
+  }
+
+  input.form__input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+  }
+
+  input.form__input[type="radio"] {
+    width: 20px;
+    height: 20px;
+  }
+
+  .form__label--radio {
+    font-size: 3rem;
   }
 }
