--- a/styles/common.css
+++ b/styles/common.css
@@ -27,6 +27,7 @@ html {
 
 body {
   min-height: 100vh;
+  height: 100vh;
   font-family: "Roboto", sans-serif;
   line-height: 1.3;
   font-weight: 400;
@@ -39,7 +40,7 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
 }
 
 h2 {
