--- a/styles/footer.css
+++ b/styles/footer.css
@@ -23,6 +23,9 @@
 }
 
 @media (min-width: 2560px) {
+  .footer{
+    padding: 20px 40px;
+  }
   .footer__social__icons img {
     height: 48px;
     width: 48px;
