--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,10 @@
 .header {
-  position: sticky;
+  position: fixed;
   padding: 0.5rem 2rem;
   z-index: 999;
   top: 0;
+  right: 0;
+  left: 0;
   box-shadow: 0 3px 10px 3px rgba(0, 0, 0, 0.2);
 }
 
