--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,4 +1,8 @@
 .footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   color: white;
   box-shadow: 0 -3px 10px 3px rgba(0, 0, 0, 0.2);
 }
@@ -23,7 +27,7 @@
 }
 
 @media (min-width: 2560px) {
-  .footer{
+  .footer {
     padding: 20px 40px;
   }
   .footer__social__icons img {
