--- a/styles/projects.css
+++ b/styles/projects.css
@@ -2,6 +2,7 @@
   width: 90%;
   margin: 0 auto;
   max-width: 1024px;
+  padding: 15px 0;
 }
 
 .project {
@@ -18,14 +19,14 @@
 }
 
 .project__content {
-  padding: 2rem 3rem;
+  padding: 1rem 3rem;
 }
 
 .project__content__title {
   font-size: 2.4rem;
   color: #fff;
   font-weight: 600;
-  margin-bottom: 3.2rem;
+  margin-bottom: 1rem;
 }
 
 .project__content__techs {
@@ -38,7 +39,7 @@
 }
 
 .project__content__description {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .tech img {
