--- a/styles/common.css
+++ b/styles/common.css
@@ -30,10 +30,8 @@ body {
   line-height: 1.3;
   font-weight: 400;
   color: #fff;
-  /* background-color: red; */
   font-size: 1.5rem;
   scroll-behavior: smooth;
-  height: 100vh;
 }
 
 h1 {
@@ -46,6 +44,11 @@ h2 {
 
 p {
   font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .container {
