--- a/styles/projects.css
+++ b/styles/projects.css
@@ -11,6 +11,7 @@
   overflow: hidden;
   transition: all 0.4s;
   margin-bottom: 20px;
+  max-width: 400px;
 }
 
 .project:hover {
@@ -40,6 +41,10 @@
 
 .project__content__description {
   font-size: 1.5rem;
+}
+
+.project__links {
+  padding: 10px 20px;
 }
 
 .tech img {
