style: media query to remove background animation for width < 768px

--- a/styles/common.css
+++ b/styles/common.css
@@ -121,6 +121,12 @@ a {
   opacity: 0.9;
 }
 
+@media (max-width: 768px) {
+  .bg--animation {
+    animation: none;
+  }
+}
+
 @media (min-width: 1024px) {
   .bg--fixed {
     background-image: linear-gradient(
