--- a/styles/common.css
+++ b/styles/common.css
@@ -80,13 +80,25 @@ a {
   background-color: var(--primary-color);
   color: #fff;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 15px;
   border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease-out, transform 0.3s ease-in,
+    color 0.5s ease-out;
+  display: inline-block;
+  font-weight: 700;
 }
 
 .btn:hover {
-  background-color: var(--secondary-color-alpha);
-  color: #fff;
+  background-color: #fff;
+  color: var(--primary-color);
+  transform: translateY(-5px);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(5px);
+  box-shadow: none;
 }
 
 .btn--secondary {
