--- a/styles/projects.css
+++ b/styles/projects.css
@@ -15,10 +15,10 @@
 }
 
 .project {
-  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0.5rem 0.15rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
   overflow: hidden;
-  transition: all 0.4s;
+  transition: all 0.5s;
   margin-bottom: 20px;
   max-width: 350px;
   width: 260px;
@@ -26,7 +26,7 @@
 
 .project:hover {
   transform: translateY(-1.2rem);
-  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+  box-shadow: 0 0 1.5rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 
 .project__content {
