--- a/styles/projects.css
+++ b/styles/projects.css
@@ -22,6 +22,7 @@
   margin-bottom: 20px;
   max-width: 350px;
   width: 260px;
+  background-color: var(--primary-dark-color);
 }
 
 .project:hover {
