--- a/styles/common.css
+++ b/styles/common.css
@@ -81,8 +81,9 @@ a {
 .btn {
   background-color: var(--primary-color);
   color: var(--secondary-color);
-  border: 1px solid var(--primary-dark-color);
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   padding: 10px 15px;
+  border: 1px solid #fff;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.5s ease-out, transform 0.3s ease-in,
@@ -93,7 +94,8 @@ a {
 
 .btn:hover {
   background-color: var(--secondary-color);
-  color: var(--primary-dark-color);
+  color: #fff;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   transform: translateY(-5px);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 }
@@ -110,6 +112,7 @@ a {
 .btn--secondary:hover {
   background-color: var(--secondary-grey);
   color: var(--primary-text-color);
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .bg--animation {
