--- a/styles/common.css
+++ b/styles/common.css
@@ -28,7 +28,7 @@ html {
 
 body {
   height: 100vh;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Slab", serif;
   line-height: 1.3;
   font-weight: 400;
   color: var(--primary-text-color);
@@ -123,6 +123,7 @@ a {
     var(--secondary-color)
   );
   background-size: 400% 400%;
+  opacity: 0.9;
   animation: gradient 10s ease infinite;
 }
 
