--- a/styles/skills.css
+++ b/styles/skills.css
@@ -2,6 +2,7 @@
   width: 100%;
   position: relative;
   margin-top: 20px;
+  padding: 100px 0px;
 }
 
 .skills__title {
@@ -14,7 +15,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
 }
 
 .skills__list {
@@ -24,7 +24,7 @@
   width: 90%;
   margin: 0 auto;
   max-width: 1024px;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .skills__item {
