--- a/styles/banner.css
+++ b/styles/banner.css
@@ -22,11 +22,11 @@
   }
 }
 
-@media (min-width: 2560px) {
+/* @media (min-width: 2560px) {
   h1 {
     font-size: 10rem;
   }
   .banner {
     margin-top: 145.5px;
   }
-}
+} */
