--- a/styles/common.css
+++ b/styles/common.css
@@ -166,7 +166,7 @@ a {
       url("../assets/images/matrix-bg.jpg");
   }
 }
-
+/* 
 @media (min-width: 2560px) {
   h1 {
     font-size: 10rem;
@@ -182,4 +182,4 @@ a {
   .container {
     max-width: 1400px;
   }
-}
+} */
