--- a/styles/skills.css
+++ b/styles/skills.css
@@ -23,7 +23,7 @@
   flex-direction: column;
   width: 90%;
   margin: 0 auto;
-  max-width: 1024px;
+  max-width: 1080px;
   gap: 2rem;
 }
 
@@ -114,7 +114,7 @@
   }
 }
 
-@media (min-width: 2560px) {
+/* @media (min-width: 2560px) {
   .skills__list {
     max-width: 1400px;
     column-gap: 5rem;
@@ -128,4 +128,4 @@
   .progress--bar {
     height: 25px;
   }
-}
+} */
