--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,12 +1,14 @@
 .footer {
   color: white;
   box-shadow: 0 -3px 10px 3px rgba(0, 0, 0, 0.2);
+  height: 75px;
 }
 
 .footer .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
 }
 
 .footer__social__icons {
