--- a/styles/projects.css
+++ b/styles/projects.css
@@ -2,10 +2,12 @@
   width: 90%;
   margin: 0 auto;
   max-width: 1080px;
+  border-top: 5px solid var(--primary-dark-color);
+  padding-top: 20px;
 }
 
 .projects h2 {
-  margin-bottom: 2rem;
+  margin-bottom: 20px;
 }
 
 .projects--layout {
