--- a/styles/video.css
+++ b/styles/video.css
@@ -7,10 +7,20 @@
   margin: 0 auto;
   margin-top: 80px;
   margin-bottom: 20px;
+  animation: fadeIn 3s linear;
 }
 
-.video iframe {
+.video video {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
