--- a/styles/common.css
+++ b/styles/common.css
@@ -26,12 +26,12 @@ html {
 }
 
 body {
-  height: 100vh;
   font-family: "Roboto Slab", serif;
   line-height: 1.3;
   font-weight: 400;
   color: var(--primary-text-color);
   font-size: 1.5rem;
+  position: relative;
 }
 
 h1 {
