--- a/styles/form.css
+++ b/styles/form.css
@@ -5,6 +5,7 @@
   /* box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15); */
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.15);
   background-color: var(--primary-dark-color);
+  margin-bottom: 40px;
 }
 
 .form__element {
