--- a/styles/header.css
+++ b/styles/header.css
@@ -7,67 +7,87 @@
   box-shadow: 0 3px 10px 3px rgba(0, 0, 0, 0.2);
 }
 
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-h2 {
-  vertical-align: center;
-  text-align: center;
-}
-
-html,
-body {
-  margin: 0;
-  height: 100%;
-}
-
-* {
-  font-family: "Raleway";
-  box-sizing: border-box;
-}
-
-.top-nav {
+.header__nav {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
   height: 75px;
   padding: 1em;
-  width: 100%;
+  width: 90%;
   max-width: 1080px;
   margin: 0 auto;
 }
 
-.menu {
-  display: flex;
-  flex-direction: row;
+.header__nav__list {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  position: absolute;
+  top: 25px;
+  margin-top: 50px;
+  left: 0;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-.menu > li {
-  margin: 0 1rem;
+.header__nav__list > li {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0.5em 0;
+  width: 100%;
+  color: white;
+  background-color: var(--primary-color);
   overflow: hidden;
 }
 
-.menu-button-container {
-  display: none;
-  height: 100%;
-  width: 30px;
+.header .header__nav__logo img {
+  width: 20rem;
+}
+
+.header__nav__list__item a:link,
+.header__nav__list__item a:visited {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.header__nav--button--container {
+  display: flex;
+
   cursor: pointer;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-#menu-toggle {
+#header__nav--toggle {
   display: none;
 }
 
-.menu-button,
-.menu-button::before,
-.menu-button::after {
+#header__nav--toggle ~ .header__nav__list li {
+  height: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+#header__nav--toggle:checked ~ .header__nav__list li {
+  border: 1px solid #fff;
+  height: 2.5em;
+  padding: 0.5em;
+  transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.header__nav__list > li:not(:last-child) {
+  border-bottom: 1px solid #fff;
+}
+
+.header__nav--button,
+.header__nav--button::before,
+.header__nav--button::after {
   display: block;
   background-color: #fff;
   position: absolute;
@@ -77,187 +97,88 @@ body {
   border-radius: 2px;
 }
 
-.menu-button::before {
+.header__nav--button::before {
   content: "";
   margin-top: -8px;
 }
 
-.menu-button::after {
+.header__nav--button::after {
   content: "";
   margin-top: 8px;
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::before {
+#header__nav--toggle:checked
+  + .header__nav--button--container
+  .header__nav--button::before {
   margin-top: 0px;
   transform: rotate(405deg);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button {
+#header__nav--toggle:checked
+  + .header__nav--button--container
+  .header__nav--button {
   background: rgba(255, 255, 255, 0);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::after {
+#header__nav--toggle:checked
+  + .header__nav--button--container
+  .header__nav--button::after {
   margin-top: 0px;
   transform: rotate(-405deg);
 }
 
-@media (max-width: 700px) {
-  .menu-button-container {
-    display: flex;
-  }
-  .menu {
-    position: absolute;
-    top: 25px;
-    margin-top: 50px;
-    left: 0;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  #menu-toggle ~ .menu li {
-    height: 0;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  #menu-toggle:checked ~ .menu li {
-    border: 1px solid #333;
-    height: 2.5em;
-    padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  .menu > li {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0.5em 0;
-    width: 100%;
-    color: white;
-    background-color: var(--primary-color);
-  }
-  .menu > li:not(:last-child) {
-    border-bottom: 1px solid var(--primary-color-dark);
-  }
-}
-
-/* .header__items {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1024px;
-  margin: 0 auto;
-}
-
-.heacer__nav {
-  width: 100%;
-}
-
-/* .header .header__logo {
-  width: 5rem;
-} */
-
-.header .header__logo {
-  width: 5rem;
-}
-.header .header__logo img {
-  width: 100%;
-}
-
-.header__nav .header__nav__list {
-  list-style: none;
-  display: flex;
-  gap: 2rem;
-}
-
-.header__nav__list__item {
-  height: 3rem;
-  width: 7rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  will-change: transform;
+.hover-underline-animation {
   display: none;
 }
 
-.header__nav__list__item--menu {
-  display: flex;
-}
-*/ .hover-underline-animation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.hover-underline-animation::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  top: 25px;
-  background-color: #fff;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
-
-.hover-underline-animation:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-.header__nav__list__item a:link,
-.header__nav__list__item a:visited {
-  font-size: 1.7rem;
-  color: #fff;
-  text-decoration: none;
-}
-
-.hidden--item {
-  display: none;
-}
-
-@media (min-width: 1024px) {
-  .hidden--item {
-    display: flex;
-  }
-  .header__nav__list__item a[href="/index.html"] {
+@media (min-width: 768px) {
+  .header__nav--button--container {
+    visibility: hidden;
     display: none;
-  }
-}
-
-/* @media (min-width: 2560px) {
-  .header {
-    padding: 2rem 10rem;
-  }
-
-  .header__nav {
-    width: auto;
-  }
-
-  .header__items {
-    max-width: 1400px;
   }
 
   .header__nav__list {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    position: initial;
+    flex: 0.5;
+    gap: 2rem;
+  }
+
+  .header__nav__list > li {
+    overflow: visible;
+  }
+
+  #header__nav--toggle:checked ~ .header__nav__list li {
+    border: none;
+    background: none;
+  }
+
+  .hover-underline-animation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+
+  .hover-underline-animation::after {
+    content: "";
+    position: absolute;
     width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    top: 40px;
+    background-color: #fff;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
   }
 
-  .header .header__logo {
-    width: 10rem;
+  .hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
   }
-
-  .header__nav .header__nav__list {
-    justify-content: space-between;
-    width: 800px;
-  }
-  .header__nav__list__item a:link,
-  .header__nav__list__item a:visited {
-    font-size: 3rem;
-  }
-} */
+}
