--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,9 @@
+.contact__title {
+  margin-bottom: 40px;
+  text-align: center;
+  border-bottom: 1px solid #fff;
+}
+
 .form {
   margin: 0 auto;
   padding: 2rem;
