--- a/styles/about.css
+++ b/styles/about.css
@@ -14,8 +14,9 @@
   flex-direction: column;
 }
 
-.about__content h2 {
-  margin-bottom: 1rem;
+.about__content__title {
+  border-bottom: none;
+  padding-bottom: 0;
 }
 
 .about__image {
@@ -35,9 +36,6 @@
     gap: 5rem;
   }
 
-  .about__content {
-    gap: 5rem;
-  }
   p {
     font-size: 2.2rem;
   }
