--- a/styles/common.css
+++ b/styles/common.css
@@ -59,13 +59,6 @@ a {
   cursor: pointer;
 }
 
-.container {
-  width: 90%;
-  max-width: 1080px;
-  margin: 0 auto;
-  padding: 2rem 0;
-}
-
 .bg--fixed {
   position: absolute;
   background-image: linear-gradient(
@@ -120,7 +113,7 @@ a {
   color: var(--primary-text-color);
 }
 
-/* .bg--animation {
+.bg--body {
   background: linear-gradient(
     -45deg,
     var(--secondary-color),
@@ -132,10 +125,10 @@ a {
   background-repeat: no-repeat;
   background-attachment: fixed;
   opacity: 0.9;
-  animation: gradient 10s ease infinite;
+  /* animation: gradient 10s ease infinite; */
 }
 
-@keyframes gradient {
+/* @keyframes gradient {
   0% {
     background-position: 0% 25%;
   }
@@ -145,7 +138,7 @@ a {
   100% {
     background-position: 0% 25%;
   }
-} */
+}  */
 
 .bg--gradient {
   background: linear-gradient(
@@ -157,8 +150,6 @@ a {
   );
   background-size: 100% 100%;
   opacity: 0.9;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 @media (max-width: 768px) {
