--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,11 +4,15 @@
   height: 75px;
 }
 
-.footer .container {
+.footer--container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100%;
+
+  width: 90%;
+  max-width: 1080px;
+  margin: 0 auto;
 }
 
 .footer__social__icons {
