feat: add meta content to portfolio and 404 pages, add formsubmit.html to show a succes message when submiting a form

--- a/styles/common.css
+++ b/styles/common.css
@@ -12,6 +12,7 @@
   --primary-grey: #495057;
   --secondary-grey: #a5a8aa;
   --progress-start-color: #f9bcca;
+  --success-message: #05b322;
 }
 
 * {
