--- a/styles/header.css
+++ b/styles/header.css
@@ -32,6 +32,11 @@
   align-items: center;
 }
 
+.header__nav__list a {
+  width: 100%;
+  text-align: center;
+}
+
 .header__nav__list > li {
   display: flex;
   justify-content: center;
@@ -75,7 +80,7 @@
 
 #header__nav--toggle:checked ~ .header__nav__list li {
   border: 1px solid #fff;
-  height: 2.5em;
+  height: 3.5em;
   padding: 0.5em;
   transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
