style: add bottom margin to p tags

--- a/styles/about.css
+++ b/styles/about.css
@@ -20,6 +20,10 @@
   padding-bottom: 0;
 }
 
+.about__content p {
+  margin-bottom: 20px;
+}
+
 .about__image {
   max-height: 350px;
   max-width: 350px;
