--- a/styles/common.css
+++ b/styles/common.css
@@ -80,8 +80,10 @@ a {
 
 .btn {
   background-color: var(--primary-color);
-  color: var(--secondary-color);
-
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 10px;
+  margin-left: 10px;
   padding: 10px 15px;
   border: 1px solid #fff;
   border-radius: 5px;
@@ -90,6 +92,8 @@ a {
     color 0.5s ease-out;
   display: inline-block;
   font-weight: 700;
+  min-width: 80px;
+  text-align: center;
 }
 
 .btn:hover {
