style: change sections margins

--- a/styles/common.css
+++ b/styles/common.css
@@ -24,7 +24,6 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  height: 100%;
 }
 
 body {
@@ -76,6 +75,25 @@ a {
   right: 0;
   bottom: 0;
   z-index: -1;
+}
+
+.top {
+  --offset: 50px;
+
+  position: sticky;
+  bottom: 20px;
+  margin-right: 10px;
+  place-self: end;
+  margin-top: calc(100vh + var(--offset));
+
+  /* visual styling */
+  text-decoration: none;
+  padding: 10px;
+  font-family: sans-serif;
+  color: #fff;
+  background: #000;
+  border-radius: 100px;
+  white-space: nowrap;
 }
 
 .btn {
