--- a/styles/banner.css
+++ b/styles/banner.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin-bottom: 40px;
   margin-top: 75px;
 }
 
