--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,8 @@
   color: white;
   box-shadow: 0 -3px 10px 3px rgba(0, 0, 0, 0.2);
   height: 75px;
+  position: absolute;
+  width: 100%;
 }
 
 .footer--container {
