--- a/styles/common.css
+++ b/styles/common.css
@@ -24,6 +24,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  /* overflow: hidden; */
 }
 
 body {
@@ -33,6 +34,7 @@ body {
   font-weight: 400;
   color: var(--primary-text-color);
   font-size: 1.5rem;
+  overflow: auto;
 }
 
 h1 {
