--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,8 +2,6 @@
   color: white;
   box-shadow: 0 -3px 10px 3px rgba(0, 0, 0, 0.2);
   height: 75px;
-  position: absolute;
-  width: 100%;
 }
 
 .footer--container {
@@ -34,7 +32,7 @@
   .footer {
     padding: 20px 40px;
   }
-  .footer__social__icons img {
+  .footer__social__icons img {g
     height: 48px;
     width: 48px;
   }
