--- a/styles/common.css
+++ b/styles/common.css
@@ -60,7 +60,7 @@ a {
   cursor: pointer;
 }
 
-.bg--fixed {
+/* .bg--fixed {
   position: absolute;
   background-image: linear-gradient(
       rgba(36, 42, 46, 0.6),
@@ -76,7 +76,7 @@ a {
   right: 0;
   bottom: 0;
   z-index: -1;
-}
+} */
 
 .top {
   --offset: 50px;
@@ -181,7 +181,7 @@ a {
   }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   .bg--fixed {
     background-image: linear-gradient(
         rgba(36, 42, 46, 0.6),
@@ -189,7 +189,7 @@ a {
       ),
       url("../assets/images/main/desktop-bg.jpg");
   }
-}
+} */
 /* 
 @media (min-width: 2560px) {
   h1 {
