fix: still the same problem

--- a/styles/common.css
+++ b/styles/common.css
@@ -24,8 +24,8 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  overscroll-behavior: none;
+  overscroll-behavior: auto;
+  background-color: var(--primary-dark-color);
 }
 
 body {
