--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,7 @@
   color: white;
   box-shadow: 0 -3px 10px 3px rgba(0, 0, 0, 0.2);
   height: 75px;
+  margin-bottom: -30px;
 }
 
 .footer--container {
