--- a/styles/common.css
+++ b/styles/common.css
@@ -62,6 +62,13 @@ a {
   cursor: pointer;
 }
 
+.content {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
 .bg--fixed {
   background-image: linear-gradient(
       rgba(36, 42, 46, 0.6),
@@ -80,7 +87,7 @@ a {
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.15);
   position: sticky;
   bottom: 15%;
-  left: 96%;
+  left: 145%;
   place-self: end;
   margin-top: calc(100vh + var(--offset));
   /* visual styling */
