style: navbar position change to sticky, change banner background image in mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -76,9 +76,8 @@ a {
     ),
     url("../assets/images/main/mobile-bg.jpg");
   background-size: cover;
-  /* background-attachment: fixed; */
-  /* background-position: center; */
-  /* background-repeat: no-repeat; */
+  background-position: center;
+  background-repeat: no-repeat;
   z-index: -1;
 }
 
