--- a/styles/video.css
+++ b/styles/video.css
@@ -4,16 +4,22 @@
   height: 50vw;
   max-height: 650px;
   max-width: 1080px;
+  min-height: 200px;
   margin: 0 auto;
-  margin-top: 80px;
   margin-bottom: 40px;
-  animation: fadeIn 3s linear;
 }
 
 .video video {
   position: absolute;
   width: 100%;
   height: 100%;
+  animation: fadeIn 3s linear;
+}
+
+.video h2 {
+  width: 100%;
+  margin-bottom: -4vw;
+  margin-top: 40px;
 }
 
 @keyframes fadeIn {
