--- a/styles/projects.css
+++ b/styles/projects.css
@@ -98,5 +98,8 @@
 @media (min-width: 1024px) {
   .projects--layout {
     grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
   }
 }
