--- a/styles/common.css
+++ b/styles/common.css
@@ -24,7 +24,6 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  height: 100%;
   scroll-padding-top: 100px;
 }
 
@@ -35,7 +34,7 @@ body {
   color: var(--primary-text-color);
   font-size: 1.5rem;
   overflow: auto;
-  height: 100%;
+  height: 100vh;
   overscroll-behavior: none;
 }
 
