--- a/styles/about.css
+++ b/styles/about.css
@@ -26,8 +26,9 @@
 }
 
 .about__image {
-  max-height: 350px;
-  max-width: 350px;
+  height: 100%;
+  /* max-height: 350px; */
+  max-width: 400px;
 }
 
 .about__image img {
