--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .banner {
-  height: 50vh;
+  height: 65vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -20,11 +20,8 @@
   }
 }
 
-/* @media (min-width: 2560px) {
+@media (min-width: 2560px) {
   h1 {
-    font-size: 10rem;
+    font-size: 8rem;
   }
-  .banner {
-    margin-top: 145.5px;
-  }
-} */
+}
