--- a/styles/footer.css
+++ b/styles/footer.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100%;
-
+  padding: 15px;
   width: 90%;
   max-width: 1080px;
   margin: 0 auto;
